--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ nvml-wrapper = { version = "0.10.0", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_System_Performance", "Win32_Foundation"] }
+wmi = "0.15.1"
+serde = "1.0.219"
 
 [features]
 default = ["amd", "nvidia", "intel", "gpu_info"]
@@ -16,3 +18,5 @@ amd = ["dep:libdrm_amdgpu_sys"]
 nvidia = ["dep:nvml-wrapper"]
 intel = []
 gpu_info = []
+
+[dependencies]
