--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 libdrm_amdgpu_sys = { version = "0.8.4", optional = true }
 nvml-wrapper = { version = "0.10.0", optional = true }
 
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.61.1", features = ["Win32_System_Performance", "Win32_Foundation"] }
+
 [features]
 default = ["amd", "nvidia", "intel", "gpu_info"]
 amd = ["dep:libdrm_amdgpu_sys"]
