--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,14 @@ edition = "2024"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libdrm_amdgpu_sys = { version = "0.8.4", optional = true }
-nvml-wrapper = { version = "0.10.0", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_System_Performance", "Win32_Foundation"] }
 wmi = "0.15.1"
 serde = "1.0.219"
+
+[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
+nvml-wrapper = { version = "0.10.0", optional = true }
 
 [features]
 default = ["amd", "nvidia", "intel", "gpu_info"]
