--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,12 @@ serde = "1.0.219"
 [target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
 nvml-wrapper = { version = "0.10.0", optional = true }
 
+[target.'cfg(target_os = "macos")'.dependencies]
+core-foundation = "0.10.0"
+
 [features]
 default = ["amd", "nvidia", "intel", "gpu_info"]
 amd = ["dep:libdrm_amdgpu_sys"]
 nvidia = ["dep:nvml-wrapper"]
 intel = []
 gpu_info = []
-
-[dependencies]
